# ascat

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  LICENSE.txt  README.md  README.rst  config_eumetsat.json  doc_requirements.txt  environment.yml  environment_pinned.yml  environment_pinned_py3.yml  environment_win.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  setup_dev_env  setup_env  test-requirements.txt  zarr_viewer.py
.github/workflows/: ascat_ubuntu.yml  ascat_windows.yml  ci.yml  main.yml  ubuntu.yml  upload_pypi.yml  windows.yml
ascat/: __init__.py  base.py  bufr.py  cgls.py  eumetsat.py  h_saf.py  level1.py  level2.py  level2_new.py  math.py  skeleton.py  timeseries.py  tuw.py  utils.py
ascat/data_readers/: bufr.py  read_bufr.py  read_eps.py  read_nc.py  templates.py
ascat/formats/: eps_ascatl1bszr_6.5.xml  eps_ascatl1bszr_6.6.xml  eps_ascatl2smo_0.1.xml
ascat/lvl1_readers/: read_eps.py  read_eps_szx.py
ascat/read_native/: bufr.py  cdr.py  eps_native.py  hdf5.py  nc.py  templates.py
docs/: Makefile  Read_H_SAF_images.rst  ascat_bufr_format.rst  conf.py  docs_env.yml  env.yml  environment.yml  examples.rst  index.rst  plot_ascat_data.rst  read_ASCAT_H25.rst  read_ascat_nrt_stacked.ipynb  read_cgls_swi_ts.ipynb  read_cgls_swi_ts.rst  read_eumetsat.ipynb  read_eumetsat.rst  read_eumetsat_eodag.ipynb  read_generic.ipynb  read_generic.rst  read_hsaf_cdr.ipynb  read_hsaf_cdr.rst  read_hsaf_nrt.ipynb  read_hsaf_nrt.rst  read_tuw_ascat.ipynb  read_tuw_ascat.rst  read_tuw_vod.ipynb  read_tuw_vod.rst  requirements.txt  stack_swaths.ipynb  xarray_readers_tutorial.ipynb
docs/org/: ascat_era5_tutorial.org  reading_cells.org  reading_swaths.org  stack_swaths.org  xarray_readers_tutorial.org
docs/read_ASCAT_H25_files/: Thumbs.db
formats/: eps.xsl  eps_ascatl1bszf_6.5.xml  eps_ascatl1bszf_7.0.xml  eps_ascatl1bszf_9.0.xml  eps_ascatl1bszo_6.4.xml  eps_ascatl1bszo_6.4m.xml  eps_ascatl1bszo_6.5.xml  eps_ascatl1bszo_7.0.xml  eps_ascatl1bszo_9.0.xml  eps_ascatl1bszr_6.4.xml  eps_ascatl1bszr_6.4m.xml  eps_ascatl1bszr_9.0.xml  eps_ascatl2smo_3b.xml  eps_ascatl2smo_4.xml  eps_ascatl2smr_3b.xml  eps_ascatl2smr_4.xml
src/ascat/: __init__.py  accessors.py  ascat_math.py  base.py  cell.py  cf_array.py  cf_conversions.py  cgls.py  download.py  download_connectors.py  download_interface.py  eumetsat.py  file_handling.py  file_search.py  h_saf.py  level1.py  level2.py  math.py  ragged_array.py  regrid.py  swath.py  tuw.py  utils.py
src/ascat/aggregate/: aggregators.py  interface.py
src/ascat/download/: connectors.py  interface.py
src/ascat/eumetsat/: level1.py  level2.py
src/ascat/formats/: ccsds.xml  eps.dtd  eps.xsl  eps_ascatl1bszf_13.1.xml  eps_ascatl1bszf_6.4m.xml  eps_ascatl1bszf_6.6.xml  eps_ascatl1bszo_13.1.xml  eps_ascatl1bszo_6.6.xml  eps_ascatl1bszr_13.1.xml  (+2 more)
tests/: conftest.py  get_path.py  no_test_download.py  no_test_h_saf.py  no_test_level1.py  no_test_level2.py  regression_baseline.json  skip_test_ragged_array.py  test_cell.py  test_cell_collection.py  test_cf_array.py  test_cglops.py  test_cgls.py  test_download.py  test_env.yml  test_esd.py  test_esd_hyperparameter_search.py  test_eumetsat.py  test_file_handling.py  test_file_search.py  test_h_saf.py  test_level1.py  test_level2.py  test_ragged_array.py  test_regression_real_data.py  test_skeleton.py  test_sparse_to_dense.py  test_sparse_zarr_to_latlon.py  test_stack.py  test_swath.py  test_swath_collection.py  test_swath_to_zarr.py  test_timeseries.py  test_tuw.py  test_xarray_accessors.py  test_xarray_ext.py  wip_test_download.py
(+31 files in other folders)
